# claude-vault

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_vault/: __init__.py  cli.py  code_parser.py  config.py  embeddings.py  markdown.py  models.py  opencode_parser.py  parser.py  pii.py  semantic_search.py  state.py  sync.py  tagging.py  watcher.py
documents/: ENCODING_FIX.md  OPENCODE_INTEGRATION.md
tests/: test_cli.py  test_cli_retag.py  test_embeddings.py  test_opencode_parser.py  test_pii.py  test_semantic_search.py  test_tagging.py  test_watcher.py
